# rag-lette

./: .gitignore  AGENTS.md  Makefile  README.md  app.py  pyproject.toml  usage.md
src/rag/: __init__.py  app.py  bedrock_kb.py  chunk.py  cli.py  config.py  db.py  embed.py  gemini.py  generate.py  services.py  vertex.py
tests/: test_app.py  test_bedrock_kb.py  test_chunk.py  test_cli.py  test_config.py  test_gemini.py  test_lancedb_db.py  test_services.py  test_sqlite_db.py  test_weaviate_db.py
